--- a/src/App.css
+++ b/src/App.css
@@ -7,32 +7,23 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: left;
+  justify-content: top;
+  font-size: calc(4px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-user{
+  display: flex;
+  gap: 0.25em;
+  flex-direction: row;
+  align-items: center;
+  justify-content: left;
+  font-size: 10pt;
+  height: 52px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
